# GPNet

./: .gitignore  _init_paths.py  get_contact_cos.py  loss.py  nms2_nowidth.py  readme.md  test.py  topk_percent_coverage_precision.py  train.py
dataset/: aabbValue.npy  grasp_dataset.py  grasp_positive.py  test_set.csv  train_set.csv
lib/: extractors.py  gpnet.py
lib/etw_pytorch_utils/: persistent_dataloader.py
lib/fps/: farthest_sample.py  main_sample.py
lib/pointnet2/: CMakeLists.txt
lib/pointnet2/models/: pointnet2_detect_contact.py
lib/pointnet2/utils/: CMakeLists.txt  build_cpu.py  pointnet2_modules.py  pointnet2_utils.py  test_matrix_k_min.py
lib/pointnet2/utils/cinclude/: matrix_k_minimums_cpu_wrapper.h  matrix_k_minimums_gpu.h  matrix_k_minimums_wrapper.h
lib/pointnet2/utils/csrc/: ball_query_gpu.cu  matrix_k_minimums.c  matrix_k_minimums_cpu.c  matrix_k_minimums_gpu.cu
simulator/gpnet_data/gripper/: parallel_simple.urdf
simulator/gpnet_data/prediction/: nms_poses_view0.txt
simulator/gpnet_data/urdf/: box000.urdf  box001.urdf  box002.urdf  box003.urdf  box004.urdf  box005.urdf  box006.urdf  box007.urdf  box008.urdf  box009.urdf  box010.urdf  box011.urdf  box012.urdf  box013.urdf  box014.urdf  box015.urdf  box016.urdf  (+23 more)
simulator/simulateTest/: AutoGraspShapeCoreUtil.py  AutoGraspSimpleShapeCore.py  Quaternion.py  gripperPoseTransform.py  gripperSimpleCollision.py  simulatorTestDemo.py  visualization.py
tools/: Quaternion.py  coverage_vs_precision.py  depth2points.py  logger.py  nms.py  proposal.py  transformTool.py  visualization.py
